src/test/resources/purescript_examples/failing/ExportConflictValue.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ExportConflict\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('C')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSProperNameImpl(ImportModuleName)
          PsiElement(module)('module')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSProperNameImpl(ImportModuleName)
          PsiElement(module)('module')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('B')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
          PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('B')
          PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('B')
          PsiElement(whitespace)('\n')
